--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-
+.idea
+*.iml
 # =========================
 # Operating System Files
 # =========================
